# my_solutions

./: .clang-format  .gitignore  README.md
Algorithms/: FFT.cpp  stdbanner.h
Algorithms/Graph/: LCA.cpp  SCC.cpp
Algorithms/String/: KMP.cpp
NOIP/1997/: 9701.cpp  9702.cpp  97031.cpp  97032.cpp
NOIP/1998/: quee.cpp  rusi.cpp  station.cpp
NOIP/1999/: huiwen.cpp  missile.cpp  stamp.cpp  travel.cpp
NOIP/2000/: dcjl.cpp  dcjl.vcxproj  fjz.cpp  fjz.vcxproj  maxmu.cpp  maxmu.vcxproj
NOIP/2001/: t1.cpp  t1.vcxproj  t2.cpp  t2.vcxproj  t3.vcxproj  t4.cpp  t4.vcxproj
NOIP/2002/: a.cpp  a.vcxproj  b.cpp  b.vcxproj  c.cpp  c.vcxproj
NOIP/2003/: Epidemic.cpp  Epidemic.vcxproj  binary.cpp  binary.vcxproj  network.cpp  network.vcxproj
NOIP/2004/: chorus.cpp  fruit.cpp  save.cpp
NOIP/2005/: equal.cpp  fire.cpp  river.cpp  scholar.cpp
NOIP/2006/: budget.cpp  budget.vcxproj  energy.cpp  energy.vcxproj
NOIP/2007/: core.cpp  count.cpp  expand.cpp  game.cpp
NOIP/2008/: matches.cpp  message.cpp  twostack.cpp  word.cpp
NOIP/2009/: son.cpp  spy.cpp  sudoku.cpp  trade.cpp
NOIP/2010/: flow.cpp  prison.cpp  tortoise.cpp  (+1 more)
OnlineJudges/lydsy/: 1000.cpp  1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.py  1007.cpp  1008.cpp  1012.cpp  1015.cpp  1022.cpp  1024.cpp  1028.cpp  1029.cpp  1031.cpp  1034.cpp  1036_LCT.cpp  1041.cpp  1045.cpp  1046.cpp  1047.cpp  1048.cpp  1050.cpp  1051.cpp  1053.cpp  1054.cpp  1059.cpp  1083.cpp  1087.cpp  1179.cpp  1191.cpp  1192.cpp  1193.cpp  1196.cpp  1202.cpp  1207.cpp  1208.cpp  1211.cpp  1216.cpp  1218.cpp  (+76 more)
省选准备/: 省选基础算法.tex
(+453 files in other folders)
